Bug 688895 - ps2pdf aborts with "Error: /unregistered in --show--"
Summary: ps2pdf aborts with "Error: /unregistered in --show--"
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Linux
: P2 normal
Assignee: leonardo
URL: http://lanl.arxiv.org/ftp/exports/pow...
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-16 12:18 UTC by keinbiervorvier
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
power2.eps (151.98 KB, application/postscript)
2006-09-21 15:05 UTC, leonardo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description keinbiervorvier 2006-09-16 12:18:04 UTC
this applies to recent svn HEAD on various linux platforms.

the figure at http://lanl.arxiv.org/ftp/exports/power2.eps.gz
fails pdf conversion with error: "Error: /unregistered in --show--"

# ps2pdf13 power2.eps
Error: /unregistered in --show--
Operand stack:
....
Current allocation mode is local
Last OS error: 2
Current file position is 151928
AFPL Ghostscript SVN PRE-RELEASE 8.55: Unrecoverable error, exit code 1

This figure can be converted to pdf with GNU Ghostscript 7.07 (2003-05-17)
but not with ESP Ghostscript 8.15.2 (2006-04-19) from Fedora Core 4 and 5.

Cheers
T.
Comment 1 Hin-Tak Leung 2006-09-21 12:04:20 UTC
URL file not accessible? access denied.
Comment 2 keinbiervorvier 2006-09-21 14:47:43 UTC
User-Agent "Wget" is not allowed at that server, because of multiple inadvertent
recursive downloads of order 10^6 files in the past. 

Use any other benign User-Agent, or wget -U ghostscript ...

Sorry for the inconvenience,
T.
Comment 3 leonardo 2006-09-21 15:05:25 UTC
Created attachment 2505 [details]
power2.eps

A local copy of the referred test file.

Folks, next time please attact test files to bug reports. Global URLs appear to
die too frequently.
Comment 4 leonardo 2006-09-21 15:05:40 UTC
a/attact/attach
Comment 5 leonardo 2007-01-21 03:08:02 UTC
Bumping priority - need to retest with recent changes.
Comment 6 keinbiervorvier 2007-01-21 17:43:05 UTC
I retested

HEAD of 01/21/07 still exhibits this problem

gs display on X11 of the attached figure works fine, ps2pdf13 or ps2pdf14 
result in error

# ps2pdf14 power2.eps
Error: /unregistered in --show--
Operand stack:

Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--  
--nostringval--   2   %stopped_push   --nostringval--   --nostringval--  
--nostringval--   false   1   %stopped_push   1797   1   3   %oparray_pop   1796
  1   3   %oparray_pop   --nostringval--   1792   1   3   %oparray_pop   1675  
1   3   %oparray_pop   --nostringval--   %errorexec_pop   .runexec2  
--nostringval--   --nostringval--   --nostringval--   2   %stopped_push  
--nostringval--
Dictionary stack:
   --dict:1080/1123(ro)(G)--   --dict:1/20(G)--   --dict:78/200(L)--  
--dict:40/89(L)--   --dict:88/162(ro)(L)--   --dict:13/50(ro)(L)--  
--dict:0/50(L)--   --dict:61/78(ro)(L)--
Current allocation mode is local
Last OS error: 2
Current file position is 151928
GPL Ghostscript SVN PRE-RELEASE 8.56: Unrecoverable error, exit code 1

Comment 7 leonardo 2007-01-22 04:08:22 UTC
The document embeds an invalid Type 3 font : the character /s32 doesn't call 
setcachedevice. Will try to make making a workaround.
Comment 8 leonardo 2007-01-22 04:15:41 UTC
An improveded revision of Comment #7 :

The document embeds an invalid Type 3 font : the character /s32 calls neither
setcachedevice nor setcachedevice2 nor setcharwidth. Will try to make making a 
workaround.

PLRM3 page 339 reads :

[beg quote]
BuildGlyph must execute one of the following operators to pass width and
bounding box information to the PostScript interpreter. This must precede 
execution
of any path construction or painting operators describing the glyph.
• setcachedevice establishes a single set of metrics for both writing modes, and
requests that the interpreter save the results in the font cache if possible.
• setcachedevice2 (LanguageLevel 2) establishes separate sets of metrics for 
writing
modes 0 and 1, and requests that the interpreter save the results in the font
cache.
• setcharwidth passes just the glyph’s width (to be used only once), and 
requests
that the glyph not be cached. This operator is typically used only if the glyph
description includes operators to set the color explicitly.
[end quote]
Comment 9 leonardo 2007-01-22 07:46:48 UTC
Patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2007-January/007212.html