Fix (pdfwrite) : Handle an invalid Type 3 font that misses setcharwidth, setcachedevice[2].

DETAILS:

Bug 688895 "ps2pdf aborts with "Error: /unregistered in --show--"".

The test document embeds an invalid Type 3 font : the character /s32
calls neither setcachedevice nor setcachedevice2 nor setcharwidth.

PLRM3 page 339 reads:

[beg quote]
BuildGlyph must execute one of the following operators to pass width and
bounding box information to the PostScript interpreter. This must precede
execution of any path construction or painting operators describing the
glyph.

* setcachedevice establishes a single set of metrics for both writing
  modes, and requests that the interpreter save the results in the font
  cache if possible.
* setcachedevice2 (LanguageLevel 2) establishes separate sets of metrics
  for writing modes 0 and 1, and requests that the interpreter save the
  results in the font cache.
* setcharwidth passes just the glyph's width (to be used only once), and
  requests that the glyph not be cached. This operator is typically used
  only if the glyph description includes operators to set the color
  explicitly.
[end quote]

Adobe appears to handle such fonts silently in both Postscript and PDF.
This patch provides same behavior.

The difference from the old code appears pretty small:
the old code set the charproc_accum flag while executing pdf_text_set_cache,
and the new one does when entering the substream.
The new code even more natural.

In the PDF output, for incorrect glyphs the Width array element
is set to zero, and d0, d1 operators are not written into the charproc.

Printing a warning about the incorrect charproc appears difficult
due to the necessity to suppress redundant messages.
It needs to add a new field into the gs_font structure.
We do not like to modify the general gs_font structure for such small reason.
Postponing this change until it is requested in practice.

EXPECTED DIFFERENCES:

None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@7635 a1074d23-0009-0410-80fe-cf8c14f379e6